# Decoding_of_EEG

./: .gitignore  123.py  EEG_plot.py  README.md  choose_conda_env.sh  docker-compose.yml  eeg_lib.py  eeg_wavelet_transform.ipynb  init-db.sql  new_metelogy.ipynb  pyproject.toml  pytorch_learnig.ipynb  read_data.ipynb  rnn_in_pytorch.ipynb  traffic.ipynb  v1.ipynb  v2.ipynb  v3.ipynb  v4.ipynb  v5.ipynb  val_set.py
docs/LaTex/: Decodnig_of_EEG_v1.tex  environment.tex
notebooks/experimental/: lstm_try.ipynb  pytorch_learnig.ipynb  rnn_in_pytorch.ipynb  v1.ipynb  v2.ipynb  v3.ipynb  v4.ipynb  v5.ipynb
notebooks/exploratory/: finale_read_date.ipynb  read_data.ipynb
scripts/: exp_monitor.sh  jupyter_lab.sh
src/: __init__.py  monitor_experiment.py  prepare_db.py  training_loop.py  write2db_test.py
src/data/: CWTDataset.py  CWTDataset_psql.py  CWTSubset.py  __init__.py  base_eeg_dataset.py  cwt_dataset.py  cwt_dataset_polars.py  cwt_transform.py  data_handler.py  dataset.py  dataset_polars.py  db_contlorer.py  egg_read_transform.py  read_data.py  read_data_polars.py  test_dataset.py  write2db_test.py
src/experiments/: __init__.py  baseLSTM_not_separate_people.py  baseLSTM_z-scorenoerm_one_person.py
src/models/: CWT_EEG.py  CWT_EEG_CrossPersonValidation.py  base_lstm_lighting.py  base_model_eeg.py  base_timefm.py  eeg_lstm_fc.py  eeg_lstm_fn_cwt.py  metrics_fn.py
src/scripts/: write2db_test.py
src/training/: bayesian_optimization.py  line_v1.py  line_zones.py  ray_training.py  ray_training_tune.py  tune_lighting_traning.py  tune_not_separate_people.py  (+2 more)
(+20 files in other folders)
