[project]
name = "decoding-of-eeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.4.0",
    "mne>=1.8.0",
    "polars>=1.17.1",
    "pywavelets>=1.8.0",
    "ray[all]>=2.40.0",
    "scikit-learn>=1.6.0",
]
